syntax = "proto3";

option go_package = "pb/game";

message TestMultiKeytag1 {
	string tag1_key = 1;
	string tag1_value = 2;
}

message TestMultiKeyimmunetag1 {
	string immunetag1_key = 1;
	string immunetag1_value = 2;
}

message TestMultiKeytestobj1 {
	uint32 testobj1_key = 1;
	uint32 testobj1_value = 2;
}

message TestMultiKeyTable {
	uint32 id = 1;
	map <string, string> tag1 = 2;
	map <string, string> immunetag1 = 3;
	uint32 level = 4;
	repeated TestMultiKeytestobj1 testobj1 = 5;
	repeated uint32 effect = 6;
	string stringkey = 7;
	uint32 uint32key = 8;
	int32 in32key = 9;
	string mstringkey = 10;
	uint32 muint32key = 11;
	int32 min32key = 12;
}

message TestMultiKeyTabledData {
	repeated TestMultiKeyTable data = 1;
}
